@@ -716,6 +716,20 @@ attribute_def job_attr_def[] = {
 	ATR_TYPE_STR,
 	PARENT_TYPE_JOB
     },
+
+/* JOB_ATR_umask */
+    {	ATTR_umask,
+	decode_l,
+	encode_l,
+	set_l,
+	comp_l,
+	free_null,
+	NULL_FUNC,
+	READ_WRITE | ATR_DFLAG_SELEQ | ATR_DFLAG_MOM,
+	ATR_TYPE_LONG,
+	PARENT_TYPE_JOB
+    },
+
 /* Site defined attributes if any, see site_job_attr_*.h  */
 #include "site_job_attr_def.h"
 
